--- a/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
@@ -32,6 +32,8 @@
     sprite: Clothing/Mask/gassecurity.rsi
   - type: Clothing
     sprite: Clothing/Mask/gassecurity.rsi
+  - type: ToggleClothing
+    action: ActionToggleSmartGasMask
   - type: Armor
     modifiers:
       coefficients:
@@ -39,6 +41,16 @@
         Slash: 0.95
         Piercing: 0.95
         Heat: 0.95
+
+- type: entity
+  id: ActionToggleSmartGasMask
+  name: Toggle Reactive armor 
+  description: Toggles the armor on and off. 
+  components:
+  - type: InstantAction
+    priority: -9
+    itemIconStyle: BigItem
+    event: !type:ToggleActionEvent
 
 - type: entity
   parent: [ClothingMaskGas]
