--- a/Resources/Prototypes/SS220/Entities/Mobs/Cyborgs/borg_chassis_clown_mime.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/Cyborgs/borg_chassis_clown_mime.yml
@@ -1,4 +1,43 @@
 - type: entity
+  id: BaseBorgChassisClownMime
+  parent: BaseBorgChassisSpeech
+  abstract: true
+  components:
+  - type: NpcFactionMember
+    factions:
+    - NanoTrasen #The seemingly best fit. It was a regular NT cyborg once, after all.
+  - type: Access
+    enabled: false
+    groups:
+    - AllAccess #Randomized access would be fun. AllAccess is the best i can think of right now that does make it too hard for it to enter the station or navigate it..
+  - type: AccessReader
+    access: [["Command"], ["Research"], ["Theatre"]]
+  - type: ShowJobIcons
+  - type: Sprite
+    sprite: SS220/Mobs/Silicon/chassis.rsi
+  - type: RotationVisuals
+    horizontalRotation: 90
+  - type: FootstepModifier
+    footstepSoundCollection:
+      collection: FootstepClown
+  - type: IntrinsicRadioReceiver
+  - type: IntrinsicRadioTransmitter
+    channels:
+    - Binary
+    - Common
+    - Science
+    - Service
+  - type: ActiveRadio
+    channels:
+    - Binary
+    - Common
+    - Science
+    - Service
+  - type: SiliconLawProvider
+    laws: CloImLawset
+    subverted: true
+
+- type: entity
   id: BorgChassisClownMime
   parent: BaseBorgChassisClownMime
   name: CloIme cyborg
