--- a/Resources/Prototypes/SS220/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -75,7 +75,7 @@
     sprite: SS220/Objects/Specific/Robotics/borgmodule.rsi
   - type: ItemBorgModule
     items:
-    - CrayonRainbowBorg
+    - BluespaceCrayon
     - Pen
     - CrowbarBaguetteCyborg
     - ToyFigurineMime
