--- a/Resources/Prototypes/SS220/Entities/Objects/Fun/crayons.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Fun/crayons.yml
@@ -1,12 +1,16 @@
 - type: entity
   parent: Crayon
-  id: CrayonRainbowBorg
+  id: BluespaceCrayon
   name: rainbow crayon
   components:
   - type: CrayonRechargeable
   - type: Sprite
-    state: rainbow
+    layers:
+    - state: bluespacecrayon
+    - state: icon
+    sprite: SS220/Objects/Fun/crayons.rsi
   - type: Item
+    sprite: SS220/Objects/Fun/crayons.rsi
     heldPrefix: rainbow
   - type: Crayon
     color: Red
