--- a/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/specific.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/specific.yml
@@ -48,6 +48,14 @@
   - type: ContainerContainer
     containers:
       toggleable-clothing: !type:ContainerSlot {}
+      item_radio: !type:ContainerSlot
+  - type: ItemSlots
+    slots:
+      item_radio:
+        name: clothing-outer-radio-handheld
+        whitelist:
+          tags:
+          - Radio
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
 
