Это не первая и не последняя ёбля. Что я тебе подарю.

--- a/Resources/Prototypes/SS220/Entities/Objects/Devices/Lockpick/lockpick.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Devices/Lockpick/lockpick.yml
@@ -1,8 +1,7 @@
 - type: entity
   parent: BaseItem
   id: Lockpick
-  suffix: Фальшивый
-  name: отмычка
+  name: Lockpick
   description: Используется для вскрытия шкафов, а также для снятия болтов у ядерной боеголовки
   components:
     - type: Sprite
