--- a/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
@@ -174,6 +174,20 @@
   - UplinkImplants
 
 - type: listing
+  id: AdrenalImplanter
+  name: uplink-adrenal-implanter-name
+  description: uplink-adrenal-implanter-desc
+  icon: {sprite: /Textures/Mobs/Species/Human/organs.rsi, state: heart-off}
+  productEntity: AdrenalImplanter
+  discountCategory: rareDiscounts
+  discountDownTo:
+    Telecrystal: 4
+  cost:
+    Telecrystal: 7
+  categories:
+  - UplinkImplants
+
+- type: listing
   id: ClothingHeadHelmetSwatSyndicate
   name: uplink-helmet-swat-syndicate-name
   description: uplink-helmet-swat-syndicate-desc
