--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/implanters.yml
@@ -18,3 +18,9 @@
     - type: Implanter
       implant: ThermalVisionImplant
 
+- type: entity
+  id: AdrenalImplanter
+  parent: BaseImplantOnlyImplanterSyndi
+  components:
+  - type: Implanter
+    implant: AdrenalImplant
