--- a/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
@@ -177,7 +177,7 @@
   id: AdrenalImplanter
   name: uplink-adrenal-implanter-name
   description: uplink-adrenal-implanter-desc
-  icon: {sprite: /Textures/Mobs/Species/Human/organs.rsi, state: heart-off}
+  icon: {sprite: /Textures/SS220/Objects/Specific/Medical/implant-adrenal.rsi, state: adrenal}
   productEntity: AdrenalImplanter
   discountCategory: rareDiscounts
   discountDownTo:
