--- a/Resources/Prototypes/Recipes/Construction/Graphs/machines/cyborg.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/machines/cyborg.yml
@@ -35,7 +35,7 @@
 #SS220 ClownMimecyborg start
   - node: cyborg
     entity: BorgChassisSelectable
-    edges: 
+    edges:
     - to: clownmimecyborg
       conditions:
         - !type:ContainerEmpty
@@ -50,7 +50,7 @@
             sprite: Objects/Fun/clownrecorder.rsi
             state: icon
           doAfter: 2
-        - tag: Bread
+        - tag: Baguette
           name: Baguette
           doAfter: 2
         - tag: Crayon
