--- a/Resources/Prototypes/SS220/tags.yml
+++ b/Resources/Prototypes/SS220/tags.yml
@@ -200,3 +200,12 @@
 # SS220 ClownMimeCyborg
 - type: Tag
   id: ClothingMaskMime
+
+- type: Tag
+  id: BorgModuleClown
+
+- type: Tag
+  id: BorgModuleMime
+
+- type: Tag
+  id: Baguette
