Убийства, кровь, демоны, ********

--- a/Resources/Prototypes/Recipes/Construction/Graphs/machines/cyborg.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/machines/cyborg.yml
@@ -86,6 +86,9 @@
         - tag: ClothingMaskMime
           name: MimeMask
           doAfter: 2
+        - tag: BananiumHorn
+          name: BananiumHorn
+          doAfter: 2
 #SS220 ClownMimecyborg end
 
   - node: derelictcyborg
