Готово, пж мёрж

--- a/Resources/Prototypes/SS220/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -100,7 +100,7 @@
     - BorgModuleClown
   - type: ItemBorgModule
     items:
-    - BikeHornInstrument
+    - BananiumHorn
     - ClownRecorder
     - RubberChicken
     - LauncherCreamPieCyborg
