--- a/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
@@ -31,7 +31,7 @@
         whitelist:
           tags:
           - WristWatch
-  #SS220 WristWatch on glove
+  #SS220 WristWatch on glove end
   - type: DamageOnInteractProtection
     damageProtection:
       flatReductions:
