ADD: DNA Copy Implant for Uplink

--- a/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
@@ -174,6 +174,20 @@
   - UplinkImplants
 
 - type: listing
+  id: DnaCopyImplanter
+  name: uplink-dna-copy-implanter-name
+  description: uplink-dna-copy-implanter-desc
+  icon: {sprite: /Textures/SS220/Objects/Specific/Medical/implant-dna-copy.rsi, state: dna-copy}
+  productEntity: BoxDnaCopyImplant
+  discountCategory: rareDiscounts
+  discountDownTo:
+    Telecrystal: 5
+  cost:
+    Telecrystal: 8
+  categories:
+  - UplinkImplants
+
+- type: listing
   id: ClothingHeadHelmetSwatSyndicate
   name: uplink-helmet-swat-syndicate-name
   description: uplink-helmet-swat-syndicate-desc
