--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/implanters.yml
@@ -18,3 +18,10 @@
     - type: Implanter
       implant: ThermalVisionImplant
 
+- type: entity
+  id: DnaCopyImplanter
+  name: Dna Copy Implanter
+  parent: BaseImplantOnlyImplanterSyndi
+  components:
+    - type: Implanter
+      implant: DnaCopyImplant
