--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/subdermal_implants.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/subdermal_implants.yml
@@ -78,3 +78,33 @@
             - TraitorRole
             - NukeOperative
 
+- type: entity
+  parent: BaseSubdermalImplant
+  id: DnaCopyImplant
+  name: dna copy implant
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: SubdermalImplant
+    implantAction: ActionActivateDnaCopy
+  - type: TriggerImplantAction
+  - type: TransferIdentity
+  - type: HiddenDescription
+    entries:
+    - label: hidden-desc-DnaCopyImplant-medical
+      jobRequired:
+      - Paramedic
+      - MedicalDoctor
+      - SeniorPhysician
+      - ChiefMedicalOfficer
+      - Brigmedic
+    - label: hidden-desc-DnaCopyImplant-research
+      jobRequired:
+      - ResearchAssistant
+      - ResearchDirector
+      - Scientist
+      - Borg
+    - label: hidden-desc-DnaCopyImplant-syndicate
+      whitelistMind:
+        mindRoles:
+        - TraitorRole
+        - NukeOperative
