--- a/Resources/Prototypes/SS220/SupaKitchen/Instruments/chopping_board.yml
+++ b/Resources/Prototypes/SS220/SupaKitchen/Instruments/chopping_board.yml
@@ -1,5 +1,4 @@
 - type: entity
-  parent: BaseItem
   id: ChoppingBoard
   name: chopping board
   description: A chessboard. Pieces included!
@@ -7,6 +6,51 @@
   - type: Sprite
     sprite: SS220/Objects/Fun/Tabletop/chessboard.rsi #SS220-Tabletop-Resprite
     state: chessboard
+    drawdepth: SmallObjects
   - type: RecipeAssembler
     instrumentType: choppingBoard
     ignoreTime: true
+  - type: ItemPlacer
+    maxEntities: 12
+    whitelist:
+      components:
+      - Food
+      - Drink
+  - type: PlaceableSurface
+  - type: Physics
+    bodyType: Dynamic
+    fixedRotation: false
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.08,-0.35,0.15,0.25"
+        mask:
+        - TabletopMachineMask
+        layer:
+        - Impassable
+        - MidImpassable
+        - LowImpassable
+        hard: false
+  - type: Item
+    size: Small
+  - type: Clickable
+  - type: InteractionOutline
+  - type: MovedByPressure
+  - type: EmitSoundOnCollide
+    sound:
+      collection: WeakHit
+  - type: EmitSoundOnLand
+    sound:
+      path: /Audio/Effects/drop.ogg
+      params:
+        volume: 2
+  - type: DamageOnHighSpeedImpact
+    damage:
+      types:
+        Blunt: 5
+    soundHit:
+      collection: MetalThud
+  - type: Pullable
+  - type: DamageExaminable
