--- a/Resources/Prototypes/SS220/SupaKitchen/Recipes/choppingBoard.yml
+++ b/Resources/Prototypes/SS220/SupaKitchen/Recipes/choppingBoard.yml
@@ -1,7 +1,7 @@
 - type: cookingRecipe
   id: RecipeShawarmaRaw
   name: Shawarma recipe
-  result: FoodShawarma
+  result: FoodRawShawarma
   instrumentType: choppingBoard
   time: 5
   reagents:
@@ -14,13 +14,44 @@
     FoodCheeseSlice: 1
 
 - type: cookingRecipe
-  id: RecipeRibsRaw
-  name: BBQ ribs recipe
-  result: FoodMealRibs
+  id: RecipeFoodBakedChevreChaud
+  name: chevre chaud recipe
+  result: FoodRawChevreChaud
   instrumentType: choppingBoard
-  time: 8
+  time: 5
+  solids:
+    FoodChevreSlice: 1
+    FoodBreadBaguetteSlice: 1
+
+- type: cookingRecipe
+  id: RecipeFoodBakedChevreChaudCotton
+  name: cotton chevre chaud recipe
+  result: FoodRawChevreChaudCotton
+  instrumentType: choppingBoard
+  time: 5
+  solids:
+    FoodChevreSlice: 1
+    FoodBreadBaguetteCottonSlice: 1
+
+- type: cookingRecipe
+  id: RecipeRibs
+  name: BBQ ribs recipe
+  result: FoodRawMealRibs
+  instrumentType: choppingBoard
+  time: 5
   reagents:
     BbqSauce: 5
   solids:
     FoodMeat: 2
     FoodKebabSkewer: 1
+
+- type: cookingRecipe
+  id: RecipeEnchiladas
+  name: enchiladas recipe
+  result: FoodMealEnchiladas
+  instrumentType: choppingBoard
+  time: 5
+  solids:
+    FoodChiliPepper: 2
+    FoodMeatCutlet: 1
+    FoodCorn: 1
