--- a/Resources/Prototypes/Entities/Objects/Decoration/jackolantern.yml
+++ b/Resources/Prototypes/Entities/Objects/Decoration/jackolantern.yml
@@ -12,6 +12,9 @@
   - type: Construction
     graph: PumpkinAddLight
     node: start
+  - type: Tag #SS220-PumpkinLantern-Craft begin
+    tags:
+    - CarvedPumpkin #SS220-PumpkinLantern-Craft end
 
 - type: entity
   parent: CarvedPumpkin
@@ -29,6 +32,9 @@
       energy: 4.0
     - type: StealTarget
       stealGroup: LAMP
+    - type: Construction #SS220-PumpkinLantern-Craft begin
+      graph: PumpkinLanternCraft
+      node: pumpkinLantern #SS220-PumpkinLantern-Craft end
 
 - type: entity
   parent: CarvedPumpkin
