--- a/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
@@ -32,9 +32,7 @@
     sprite: Clothing/Mask/gassecurity.rsi
   - type: Clothing
     sprite: Clothing/Mask/gassecurity.rsi
-  - type: ToggleClothing #SS220 - Smart gas mask - start
-    action: ActionSmartGasMask
-  - type: UserInterface
+  - type: UserInterface #SS220 - Smart gas mask - start
     interfaces:
       enum.SmartGasMaskUiKey.Key:
         type: SmartGasMaskBoundUserInterface
